<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:id="@+id/mainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textStyle="bold"
        android:id="@+id/loggedInTextView"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textSize="35sp" />

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/initialText"
        android:id="@+id/credentialWarningTextView"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textSize="30sp"/>



    <Button
        android:id="@+id/loginBtn"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_width="180dp"
        android:background="@drawable/black_button"
        style="@style/button_text"
        android:layout_gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_width="180dp"
        android:background="@drawable/black_button"
        style="@style/button_text"
        android:layout_gravity="center"
        android:textSize="25sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:weightSum="1"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/logoutBtn"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_width="180dp"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/packetsBtn"
            android:layout_height="wrap_content"
            android:text="@string/viewPackets"
            android:layout_width="180dp"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/sensorSettingsBtn"
            android:layout_height="wrap_content"
            android:text="@string/sensors"
            android:layout_width="180dp"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/myDataBtn"
            android:layout_height="wrap_content"
            android:text="@string/myData"
            android:layout_width="180dp"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/patientsBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/patients"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/doctorsBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/doctors"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_margin="5dp"/>
        </LinearLayout>
</LinearLayout>