<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textStyle="bold"
        android:id="@+id/loggedInTextView"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/sensorSettings"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sensorName"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/sensorNameTextView" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:id="@+id/specificSensorNameTextView"
            android:text="sample name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="104dp"
            android:layout_marginStart="104dp"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/collectionInterval"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/collectionIntervalTextView" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/intervalEditText"
            android:layout_weight="0.82"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/connectionStatus"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/connectionStatusTextView" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:id="@+id/specificConnectionStatusTextView"
            android:text="sample status"
            android:textStyle="bold"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/sensorConnectBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/sensorConnect"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center|bottom"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sensorDataSubmitBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/saveChanges"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center|bottom"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/deleteSensorBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/deleteSensor"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center|bottom"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/backBtn"
            android:background="@drawable/black_button"
            style="@style/button_text"
            android:layout_gravity="center|bottom"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Note: Not fully implemented.\nHeartbeat is only working sensor."
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:id="@+id/implementationNoteTextView" />

</LinearLayout>