<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textStyle="bold"
        android:id="@+id/loggedInTextView"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/patientData"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/userName"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/nameTextView" />

        <TextView
            android:layout_width="251dp"
            android:layout_height="match_parent"
            android:id="@+id/nameText"
            android:text=""
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/patientDataRequestBtn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/requestData"
                android:background="@drawable/black_button"
                style="@style/button_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/viewDataBtn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/viewData"
                android:background="@drawable/black_button"
                style="@style/button_text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/patientDataBackBtn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/backBtn"
                android:background="@drawable/black_button"
                style="@style/button_text"
                android:layout_gravity="center|bottom"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>