<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
    android:id="@+id/titleBar"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:text="@string/signup"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#000000"
    android:textStyle="bold"
    android:textSize="30sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/userName"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/usernameTextView" />



        <EditText
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:id="@+id/usernameEditText"
            android:gravity="end"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/passwordTextView" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:gravity="end"
            android:layout_marginLeft="59dp"
            android:layout_marginStart="59dp"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/verifyPassword"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/verifyPasswordTextView" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:id="@+id/verifyPasswordEditText"
            android:inputType="textPassword"
            android:gravity="end" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/emailTextView" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:id="@+id/email_editText"
            android:gravity="end"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/inputErrorTextView"
        android:textIsSelectable="true"
        android:textColor="#e7a70c" />

    <Button
        android:id="@+id/signupSubmitBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@drawable/black_button"
        style="@style/button_text"
        android:layout_gravity="center|bottom"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/signupBackBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:background="@drawable/black_button"
        style="@style/button_text"
        android:layout_gravity="center|bottom"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

</LinearLayout>