<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textStyle="bold"
        android:id="@+id/loggedInTextView"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/myData"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dataStatus"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/dataStatusTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:id="@+id/currentDataStatusTextView" />
    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@color/white"
        android:id="@+id/graph"
        android:layout_margin="10dp"
        android:layout_weight="0.89" />

    <Button
        android:id="@+id/userDataBackBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:background="@drawable/black_button"
        style="@style/button_text"
        android:layout_gravity="center|bottom"
        android:textSize="20sp" />
</LinearLayout>